fix: space fixes, removed custom gap and padding value to tailwind.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,8 @@
 
 @layer components {
   .questions-card {
-    @apply bg-gray-700 min-h-[385px] w-full rounded-xl pt-[24px] pl-[16px] pr-[16px] flex flex-col justify-between border-[0.5px] border-gray-500;
+    @apply bg-gray-700 min-h-[385px] w-full rounded-xl pt-6 pl-4 pr-4 flex flex-col justify-between border border-gray-500;
+
   }
   .loading-line-animation {
     animation: loadingLine 4s linear;
